# neuromorphic-control

./: README.md  behavior.py  controller.py  demo_v3.py  encoder.py  gitignore.txt  snn_model.py  snn_tutorial.md  wrap_load_save.py
AllScene/: Scene.xml  baiduApollo.xml  new_baiduApollo.urdf  robomaster_s1.xml
AllScene/Allmesh/Environment/: road_texture.py
AllScene/Allmesh/robot_meshes/: arm_1.stl  arm_1_collision.stl  arm_1_cylinder.stl  arm_2.stl  arm_2_bar_1.stl  arm_2_bar_2.stl  arm_2_collision.stl  arm_base.stl  arm_base_collision.stl  armor.stl  ball.stl  base_collision.stl  base_link_new.STL  battery.stl  battery_pin_left.stl  battery_pin_right.stl  blaster_bug.stl  blaster_gun.stl  blaster_gun_collision.stl  blaster_magazin.stl  blaster_magazin_collision.stl  blaster_top.stl  blaster_top_collision.stl  camera.stl  chassis.stl  controller.stl  controller_cover.stl  endpoint_bracket.stl  endpoint_bracket_collision.stl  extension_base.stl  extension_support.stl  front_led.stl  front_right_wheel.stl  gimbal.stl  gimbal_base.stl  gimbal_base_collision.stl  gimbal_collision.stl  gimbal_left_armor.stl  gimbal_left_led.stl  gimbal_left_led_0.stl  (+74 more)
custom_op_in_lyn/: custom_op_load_save.py  custom_op_rand.py
custom_op_in_pytorch/: CMakeLists.txt  build_so.sh  custom_op_Rand.cpp  custom_op_Rand.h  custom_op_myLif.cpp  custom_op_myLif.h
desired_trajectory/: apollo_phase_0.pkl  apollo_phase_1.pkl  apollo_phase_2.pkl  apollo_phase_3.pkl  desired_pickup.pkl
models/idm_net/: net_params.json  runtest.py
models/pe_net/: runtest.py
models/pe_net/Net_0/: top_graph.json
(+8 files in other folders)
